<resources>
    <string name="app_name">Merchant</string>

    <string name="action_settings">Settings</string>
    <string name="action_menu3">About Us</string>

    //scanner
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>

    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Login Here.</string>
    <string name="logout">Logout</string>

    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="ecoca_h">EcoCa$h</string>
    <string name="paypal">PayPal</string>
    <string name="cancel">CANCEL</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="none">none</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="photo">Photo</string>
    <string name="reminder">Reminder</string>
    <string name="recording">Recording</string>
    <string name="createnote">Create Note</string>
    <string name="search">Search</string>
    <string name="search_using_scanner">Search Using Scanner</string>
    <string name="title_activity_search_activty">SearchActivty</string>

</resources>
