<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/checkOutTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/select_payment_method"
        android:textSize="17sp"
        android:textStyle="bold"/>
    //new changes

    <Button
        android:id="@+id/ecocash"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@+id/checkOutTextTitle"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/none"
        android:text="@string/ecoca_h"

        android:textColor="@android:color/holo_red_light"/>

    <Button
        android:id="@+id/paypal"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@+id/ecocash"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/accent"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:contentDescription="@string/none"
        android:text="@string/paypal"
        android:textColor="@android:color/background_light"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/paypal"
        android:background="@null"
        android:text="@string/cancel"
        />

</RelativeLayout>


