<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Toolbar -->
                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_redb"
                    style="@style/Widget.MaterialSheetFab.ToolBar" />

                <!-- Tabs -->
                <com.vhg.empire.merchant.styling.SlidingTabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="2dp"
                    android:background="@color/ColorPrimary"/>
                <!--<android.support.design.widget.TabLayout
                    android:id="@+id/tabs"
                    style="@style/Widget.MaterialSheetFab.TabLayout" />-->
            </android.support.design.widget.AppBarLayout>

            <!-- View pager -->
            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/appbar"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </android.support.design.widget.CoordinatorLayout>

        <!-- Your FAB implementation -->
        <com.vhg.empire.merchant.search.fab.Fab
            android:id="@+id/fab"
            style="@style/Widget.MaterialSheetFab.Fab"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <!-- Overlay that dims the screen -->
        <com.vhg.empire.merchant.search.fab.DimOverlayFrameLayout
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- Circular reveal container for the sheet -->
        <com.vhg.empire.merchant.search.fab.RevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|bottom"
            android:orientation="vertical">

            <!-- Sheet that contains your items -->
            <android.support.v7.widget.CardView
                android:id="@+id/fab_sheet"
                style="@style/Widget.MaterialSheetFab.Sheet">

                <!-- Sheet items -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Recording -->
                    <TextView
                        android:id="@+id/sheet_search"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:drawableLeft="@mipmap/ic_launcher"
                        android:drawableStart="@mipmap/ic_launcher"
                        android:text="@string/search" />

                    <!-- Reminder -->
                    <TextView
                        android:id="@+id/sheet_scan"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:drawableLeft="@mipmap/ic_launcher"
                        android:drawableStart="@mipmap/ic_launcher"
                        android:text="@string/search_using_scanner" />

                    <!-- Photo -->
                    <TextView
                        android:id="@+id/fab_sheet_item_photo"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:drawableLeft="@mipmap/ic_launcher"
                        android:drawableStart="@mipmap/ic_launcher"
                        android:text="@string/photo" />

                    <!-- Note -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/accent">

                        <TextView
                            android:id="@+id/fab_sheet_item_note"
                            style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                            android:drawableLeft="@mipmap/ic_launcher"
                            android:drawableStart="@mipmap/ic_launcher"
                            android:text="@string/createnote" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </com.vhg.empire.merchant.search.fab.RevealLinearLayout>



    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>